--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     Página creada por J.Pocai.
    </i>
 </h6>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae at vero labore dolore rerum quasi atque quae odit itaque voluptas eos quidem aspernatur impedit similique numquam minus, facilis saepe, nisi sapiente enim ut consequatur. Harum tempore, porro quidem sapiente hic voluptatem commodi veniam exercitationem illo consequatur mollitia earum sed perferendis ratione qui est. Qui, culpa. Ad dolore, sint beatae dolorem ullam voluptatum earum perspiciatis nisi debitis sapiente unde, minima totam voluptatibus itaque recusandae. Ut dolor magni omnis possimus molestiae harum quia debitis veritatis, ducimus fugit quae sequi temporibus veniam ratione placeat consequuntur illum nostrum exercitationem expedita dolores distinctio accusamus inventore.
+</p>
     </footer>
 </body>
 </html>
