--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,6 +8,7 @@
     <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
     <title>About Us</title>
     <link rel="stylesheet" href="./Estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
     <body>
         <div class="contenedorAbout">
@@ -18,7 +19,7 @@
                      Nosotros...
                 </h1>
                  <br>
-             <nav class="menuinicial">
+             <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
                 <ul>
                     <li><a href="./index.html" target="blank">Home</a>
                         <ul>
