--- a/ContactUs.html
+++ b/ContactUs.html
@@ -8,6 +8,7 @@
     <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
     <title>Contact Us</title>
     <link rel="stylesheet" href="./Estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body class="contenedorcontacto">
     <header class="Hcontact">
@@ -15,7 +16,7 @@
         <h1>
             Contacto.
         </h1>
-        <nav class="menuinicial">
+        <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html" target="blank">Home</a>
                     <ul>
@@ -70,9 +71,9 @@
         <br><br><hr><br>
         <section>
             <ul class="sucursales">
-                <li><a href="#">Sucursal Olivos</a><img src="../Sapu café.png" alt="Sucursal Olivos" width="200px"></li>
-                <li><a href="#">Sucursal Martinez</a><img src="../Sapu café.png" alt="Sucursal Martinez" width="200px"></li>
-                <li><a href="#">Sucursal CABA</a><img src="../Sapu café.png" alt="Sucursal CABA" width="200px"></li>
+                <li class="sucursales__img"><a href="#">Sucursal Olivos</a><img src="../Sapu café.png" alt="Sucursal Olivos" width="200px"></li>
+                <li class="sucursales__img"><a href="#">Sucursal Martinez</a><img src="../Sapu café.png" alt="Sucursal Martinez" width="200px"></li>
+                <li class="sucursales__img"><a href="#">Sucursal CABA</a><img src="../Sapu café.png" alt="Sucursal CABA" width="200px"></li>
             </ul>
         </section>
     <br><hr><br>
