--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
     <title> Index</title>
     <link rel="stylesheet" href="./Estilo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
     <header class="headerinicio">
         <h1 id="arriba">
             <i>
-            Sapu Café ☕
+            Sapu Café <img src="../Icono/favicon-32x32.png" alt="">
             </i>
         </h1><br><br>
-        <nav class="menuinicial">
+        <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html" target="blank">Home</a>
                     <ul>
@@ -51,12 +52,12 @@
                 <h2>
                     Principales productos.
                 </h2>
-                <ul class="productoshome">
-                    <li><img src="#" alt="Producto"></li>
-                    <li><img src="#" alt="Producto"></li>
-                    <li><img src="#" alt="Producto"></li>
-                    <li><img src="#" alt="Producto"></li>
-                    <li><img src="#" alt="Producto"></li>
+                <ul class="Productos1__titulo">
+                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
+                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
+                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
+                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
+                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
                 </ul>
         </section>       
     <hr><br>
@@ -64,9 +65,9 @@
     <footer>
     <section>
         <ul class="sucursales">
-            <li><a href="#">Sucursal Olivos</a><img src="../Sapu café.png" alt="Sucursal Olivos" width="200px"></li>
-            <li><a href="#">Sucursal Martinez</a><img src="../Sapu café.png" alt="Sucursal Martinez" width="200px"></li>
-            <li><a href="#">Sucursal CABA</a><img src="../Sapu café.png" alt="Sucursal CABA" width="200px"></li>
+            <li class="sucursales__img"><a href="#">Sucursal Olivos</a><img src="#" alt="Sucursal Olivos" width="200px"></li>
+            <li class="sucursales__img"><a href="#">Sucursal Martinez</a><img src="#" alt="Sucursal Martinez" width="200px"></li>
+            <li class="sucursales__img"><a href="#">Sucursal CABA</a><img src="#" alt="Sucursal CABA" width="200px"></li>
         </ul>
     </section>
 <br><hr><br>
@@ -83,9 +84,6 @@
     Página creada por J.Pocai.
    </i>
 </h6>
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae at vero labore dolore rerum quasi atque quae odit itaque voluptas eos quidem aspernatur impedit similique numquam minus, facilis saepe, nisi sapiente enim ut consequatur. Harum tempore, porro quidem sapiente hic voluptatem commodi veniam exercitationem illo consequatur mollitia earum sed perferendis ratione qui est. Qui, culpa. Ad dolore, sint beatae dolorem ullam voluptatum earum perspiciatis nisi debitis sapiente unde, minima totam voluptatibus itaque recusandae. Ut dolor magni omnis possimus molestiae harum quia debitis veritatis, ducimus fugit quae sequi temporibus veniam ratione placeat consequuntur illum nostrum exercitationem expedita dolores distinctio accusamus inventore.
-</p>
     </footer>
 </body>
 </html>
