--- a/AboutUs.html
+++ b/AboutUs.html
@@ -45,7 +45,7 @@
             </div>
 </div>
     <footer class="Fabout">
-        <nav>
+        <nav class="bg-info p-2">
             <ul class="menu2">
                  <li><a href="./index.html">Home</a></li>
                  <li><a href="#">Facebook</a></li>
