--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br><br>
     <main>
         <section>
-            <h2>
+            <h2 class="text-light">
                 Nuestra historia...
             </h2><br>
             <p class="intro">
@@ -50,10 +50,10 @@
         </section>
     <hr><br>
         <section class="Productos1">
-                <h2>
+                <h2 class="text-light">
                     Principales productos.
                 </h2>
-                <ul class="Productos1__titulo">
+                <ul class="Productos1__titulo text-info">
                     <li class="Productos1__pr"><img src="#" alt="Producto"></li>
                     <li class="Productos1__pr"><img src="#" alt="Producto"></li>
                     <li class="Productos1__pr"><img src="#" alt="Producto"></li>
@@ -64,7 +64,7 @@
     <hr><br>
     </main>
     <footer>
-    <section>
+    <section class="text-success text-opacity-50%">
         <ul class="sucursales">
             <li class="sucursales__img"><a href="#">Sucursal Olivos</a><img src="#" alt="Sucursal Olivos" width="200px"></li>
             <li class="sucursales__img"><a href="#">Sucursal Martinez</a><img src="#" alt="Sucursal Martinez" width="200px"></li>
@@ -72,7 +72,7 @@
         </ul>
     </section>
 <br><hr><br>
-<nav>
+<nav class="bg-info p-3">
     <ul class="menu2">
         <li><a href="#" id="arriba">Home</a></li>
         <li><a href="#">Facebook</a></li>
