--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= "shortcut icon" href="../Icono/favicon-32x32.png">
-    <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
+    <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
     <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./Estilo.css">
@@ -13,10 +12,6 @@
 </head>
 <body class="contenedorcontacto">
     <header class="Hcontact">
-        <img src="../Icono/favicon-32x32.png" alt="Logo"><br>
-        <h1>
-            Contacto.
-        </h1>
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html" target="blank">Home</a>
@@ -73,10 +68,8 @@
     <footer class="footcontact">
         <br><br><hr><br>
         <section>
-            <ul class="sucursales text-opacity-25">
-                <li class="sucursales__img"><a href="#">Sucursal Olivos</a><img src="../Sapu café.png" alt="Sucursal Olivos" width="200px"></li>
-                <li class="sucursales__img"><a href="#">Sucursal Martinez</a><img src="../Sapu café.png" alt="Sucursal Martinez" width="200px"></li>
-                <li class="sucursales__img"><a href="#">Sucursal CABA</a><img src="../Sapu café.png" alt="Sucursal CABA" width="200px"></li>
+            <ul class="sucursales">
+                <li class="sucursales__img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
             </ul>
         </section>
     <br><hr><br>
@@ -88,11 +81,6 @@
             <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
         </ul> 
     </nav><br><br>
-    <h6>
-       <i>
-        Página creada por J.Pocai.
-       </i>
-    </h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
