--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= "shortcut icon" href="../Icono/favicon-32x32.png">
-    <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
+    <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./Estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
     <body>
-        <div class="contenedorAbout">
-            <header class="HAbout">
-                <img src="../Icono/favicon-32x32.png" alt="Logo">
+        <header class="HAbout">
                 <br>
                 <h1>
                      Nosotros...
                 </h1>
                  <br>
-             <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
+            <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
                 <ul>
                     <li><a href="./index.html" target="blank">Home</a>
                         <ul>
@@ -40,12 +37,25 @@
             </p>
         </main>
         <br><br>
+        <section class="contGrid">
             <div class="videonos">
-                <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="0" width="50%" height="120%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="100%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-</div>
+            <div class="foto1">
+                <img src="../Varios/images (5).png" alt="cafeteria">
+            </div>
+            <div class="foto2">
+                <img src="../Varios/descarga1.png" alt="cafeteria">
+            </div>
+            <div class="foto3">
+                <img src="../Varios/descarga2.png" alt="cafeteria">
+            </div>
+            <div class="foto4">
+                <img src="../Varios/images.png" alt="cafeteria">
+            </div>
+        </section>
     <footer class="Fabout">
-        <nav class="bg-info p-2">
+        <nav class="p-2">
             <ul class="menu2">
                  <li><a href="./index.html">Home</a></li>
                  <li><a href="#">Facebook</a></li>
@@ -53,11 +63,6 @@
                  <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
             </ul> 
         </nav><br><br>
-        <h6>
-            <i>
-                Página creada por J.Pocai.
-            </i>
-        </h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
