--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel= "shortcut icon" href="../Icono/favicon-32x32.png">
-    <link rel= "shortcut icon" href="../Icono/favicon_io/favicon-16x16.png">
+    <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
     <title> Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./Estilo.css">
@@ -13,11 +12,6 @@
 </head>
 <body>
     <header class="headerinicio">
-        <h1 id="arriba">
-            <i>
-            Sapu Café <img src="../Icono/favicon-32x32.png" alt="">
-            </i>
-        </h1><br><br>
         <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html" target="blank">Home</a>
@@ -33,42 +27,35 @@
     </header>
     <br><br>
     <main>
+    
+        <br><br><br>
         <section>
-            <h2 class="text-light">
-                Nuestra historia...
-            </h2><br>
-            <p class="intro">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. 
-            </p>
-        </section>
-        <section class="videohome">
-            <aside>
-                <div>
-                    <iframe width="300px" height="300px" src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </aside>
+        <p class="intro">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio.
+        </p>
         </section>
     <hr><br>
-        <section class="Productos1">
-                <h2 class="text-light">
-                    Principales productos.
-                </h2>
-                <ul class="Productos1__titulo text-info">
-                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
-                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
-                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
-                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
-                    <li class="Productos1__pr"><img src="#" alt="Producto"></li>
-                </ul>
-        </section>       
+    <section class="carousel">
+        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../Varios/coffee-cup-coffee-cup-caffeine-wallpaper-preview.png" class="d-block w-50 h-50" alt="Producto">
+              </div>
+              <div class="carousel-item">
+                <img src="../Varios/images.png" class="d-block w-50 h-50" alt="Producto">
+              </div>
+              <div class="carousel-item">
+                <img src="../Varios/images (5).png" class="d-block w-50 h-50" alt="Producto">
+              </div>
+            </div>
+        </div>
+    </section>  
     <hr><br>
     </main>
     <footer>
-    <section class="text-success text-opacity-50%">
+    <section>
         <ul class="sucursales">
-            <li class="sucursales__img"><a href="#">Sucursal Olivos</a><img src="#" alt="Sucursal Olivos" width="200px"></li>
-            <li class="sucursales__img"><a href="#">Sucursal Martinez</a><img src="#" alt="Sucursal Martinez" width="200px"></li>
-            <li class="sucursales__img"><a href="#">Sucursal CABA</a><img src="#" alt="Sucursal CABA" width="200px"></li>
+            <li class="sucursales__img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
         </ul>
     </section>
 <br><hr><br>
@@ -80,11 +67,6 @@
         <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
     </ul> 
 </nav><br><br>
-<h6>
-   <i>
-    Página creada por J.Pocai.
-   </i>
-</h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
