--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,13 +10,8 @@
     <link rel="stylesheet" href="./Estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-    <body>
+    <body class="ContenedorAbout">
         <header class="HAbout">
-                <br>
-                <h1>
-                     Nosotros...
-                </h1>
-                 <br>
             <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
                 <ul>
                     <li><a href="./index.html" target="blank">Home</a>
@@ -55,7 +50,7 @@
             </div>
         </section>
     <footer class="Fabout">
-        <nav class="p-2">
+        <nav class="p-1">
             <ul class="menu2">
                  <li><a href="./index.html">Home</a></li>
                  <li><a href="#">Facebook</a></li>
