--- a/ContactUs.html
+++ b/ContactUs.html
@@ -26,8 +26,8 @@
         </nav>
     </header>
     <br><br>
-    <main>
-        <section class="Forcoment">
+    <main class="Forcoment">
+        <section>
             <form action="#">
                 <h2>
                     Formulario de contacto.
@@ -37,7 +37,7 @@
                     <textarea name="Comentarios" id="" cols="30" rows="10" placeholder="Deja tus comentarios..."></textarea>
                 </div>
         </section><br>
-                    <div class="Bootform">
+                <div class="Bootform">
                     <form>
                         <div class="mb-3">
                           <label for="name" class="form-label">Nombre y apellido</label>
@@ -59,11 +59,8 @@
                           <label class="Genero" value="Femenino">Femenino</label>
                         </div><br>
                         <button type="submit" class="btn btn-primary">Submit</button>
-                      </form>
+                      </form>                    
                 </div>
-            </fieldset>
-        </section>                     
-            </form>
     </main>
     <footer class="footcontact">
         <br><br><hr><br>
@@ -73,7 +70,7 @@
             </ul>
         </section>
     <br><hr><br>
-    <nav class="bg-info p-2">
+    <nav class="bg-info p-1">
         <ul class="menu2">
             <li><a href="./index.html">Home</a></li>
             <li><a href="#">Facebook</a></li>
