--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./Estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-<body>
-    <header class="headerinicio">
+<body class="ContenedorInicio">
+    <header class="headerInicio">
         <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html" target="blank">Home</a>
@@ -26,47 +26,46 @@
         </nav>
     </header>
     <br><br>
-    <main>
-    
+    <main class="mainInicio">
         <br><br><br>
         <section>
-        <p class="intro">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio.
-        </p>
+            <p class="intro">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio.
+            </p>
         </section>
     <hr><br>
     <section class="carousel">
         <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Varios/coffee-cup-coffee-cup-caffeine-wallpaper-preview.png" class="d-block w-50 h-50" alt="Producto">
+                <img src="../Varios/coffee-cup-coffee-cup-caffeine-wallpaper-preview.png" class="d-block w-70 h-50" alt="Producto">
               </div>
               <div class="carousel-item">
-                <img src="../Varios/images.png" class="d-block w-50 h-50" alt="Producto">
+                <img src="../Varios/images.png" class="d-block w-70 h-50" alt="Producto">
               </div>
               <div class="carousel-item">
-                <img src="../Varios/images (5).png" class="d-block w-50 h-50" alt="Producto">
+                <img src="../Varios/images (5).png" class="d-block w-70 h-50" alt="Producto">
               </div>
             </div>
         </div>
     </section>  
     <hr><br>
     </main>
-    <footer>
+    <footer class="footerInicio">
     <section>
         <ul class="sucursales">
-            <li class="sucursales__img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+            <li class="sucursales__img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600vw" height="300vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
         </ul>
     </section>
-<br><hr><br>
-<nav class="bg-info p-3">
-    <ul class="menu2">
-        <li><a href="#" id="arriba">Home</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
-    </ul> 
-</nav><br><br>
+        <br><hr><br>
+        <nav class="bg-info">
+            <ul class="menu2">
+                <li><a href="#" id="arriba">Home</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
+            </ul> 
+        </nav><br><br>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
