--- a/ContactUs.html
+++ b/ContactUs.html
@@ -14,14 +14,14 @@
     <header class="Hcontact">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html" target="blank">Home</a>
+                <li><a href="./index.html">Home</a>
                     <ul>
                         <li><a href="#"> Item 1</a></li>
                         <li><a href="#"> Item 2</a></li>
                     </ul>    
                 </li>
-                <li><a href="./AboutUs.html" target="blank">About Us</a></li>
-                <li><a href="./ContactUs.html" target="blank">Contacts Us</a></li>
+                <li><a href="./AboutUs.html">About Us</a></li>
+                <li><a href="./ContactUs.html">Contacts Us</a></li>
             </ul>  
         </nav>
     </header>
@@ -73,9 +73,9 @@
     <nav class="p-1">
         <ul class="menu2">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
+            <li><a href="#" target="_blank">Facebook</a></li>
+            <li><a href="#" target="_blank">Instagram</a></li>
+            <li><a href="./ContactUs.html">Contact Us</a></li>
         </ul> 
     </nav><br><br>
     </footer>
