--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title> Index</title>
+    <title> Index </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -14,14 +14,14 @@
     <header class="headerInicio">
         <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html" target="blank">Home</a>
+                <li><a href="./index.html">Home</a>
                     <ul>
                         <li><a href="#"> Item 1</a></li>
                         <li><a href="#"> Item 2</a></li>
                     </ul>    
                 </li>
-                <li><a href="./AboutUs.html" target="blank">About Us</a></li>
-                <li><a href="./ContactUs.html" target="blank">Contacts Us</a></li>
+                <li><a href="./AboutUs.html">About Us</a></li>
+                <li><a href="./ContactUs.html">Contacts Us</a></li>
             </ul> 
         </nav>
     </header>
@@ -61,9 +61,9 @@
         <nav class="p-1">
             <ul class="menu2">
                 <li><a href="#" id="arriba">Home</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="./ContactUs.html" target="blank">Contact Us</a></li>
+                <li><a href="#" target="_blank">Facebook</a></li>
+                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="./ContactUs.html">Contact Us</a></li>
             </ul> 
         </nav><br><br>
     </footer>
