--- a/AboutUs.html
+++ b/AboutUs.html
@@ -53,8 +53,8 @@
         <nav class="p-1">
             <ul class="menu2">
                  <li><a href="./index.html">Home</a></li>
-                 <li><a href="#" target="_blank">Facebook</a></li>
-                 <li><a href="#" target="_blank">Instagram</a></li>
+                 <li><a href="https://es-la.facebook.com/" target="_blank">Facebook</a></li>
+                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
                  <li><a href="./ContactUs.html">Contact Us</a></li>
             </ul> 
         </nav><br><br>
