--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <nav class="p-1">
             <ul class="menu2">
                 <li><a href="#" id="arriba">Home</a></li>
-                <li><a href="#" target="_blank">Facebook</a></li>
-                <li><a href="#" target="_blank">Instagram</a></li>
+                <li><a href="https://es-la.facebook.com/" target="_blank">Facebook</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
                 <li><a href="./ContactUs.html">Contact Us</a></li>
             </ul> 
         </nav><br><br>
