--- a/ContactUs.html
+++ b/ContactUs.html
@@ -28,33 +28,33 @@
     <br><br>
     <main class="Forcoment">
         <section>
-            <form action="#">
+            <form action="text">
                 <h2>
                     Formulario de contacto.
                 </h2>
-                <div class="comments">
+                <div class="comments m-5">
                     <label for="Comentarios">Escribe tu comentario</label><br>
-                    <textarea name="Comentarios" id="" cols="30" rows="10" placeholder="Deja tus comentarios..."></textarea>
+                    <textarea name="Comentarios" cols="70" rows="10" placeholder="Deja tus comentarios..."></textarea>
                 </div>
         </section><br>
                 <div class="Bootform">
                     <form>
-                        <div class="mb-3">
+                        <div class="m-5">
                           <label for="name" class="form-label">Nombre y apellido</label>
                           <input type="name" class="form-control" id="exampleInputname">
                         </div>
-                        <div class="mb-3">
+                        <div class="m-5">
                           <label for="email" class="form-label">Email</label>
                           <input type="email" class="form-control" id="email">
                         </div><br>
-                        <h4>
+                        <h4 class="m-3">
                             Género.
                         </h4>
-                        <div class="mb-3 form-check">
+                        <div class="m-5 form-check">
                           <input type="radio" class="form-check-input" id="Masculino">
                           <label class="Genero" value="Masculino">Masculino</label>
                         </div>
-                        <div>
+                        <div class="m-5 form-check">
                           <input type="radio" class="form-check-input" id="Femenino">
                           <label class="Genero" value="Femenino">Femenino</label>
                         </div><br>
@@ -66,7 +66,8 @@
         <br><br><hr><br>
         <section class="sucursales">
             <div class="sucursales__ubi">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="sucursales__ubi__map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="700" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     <br><hr><br>
