--- a/AboutUs.html
+++ b/AboutUs.html
@@ -37,16 +37,16 @@
                 <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="100%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="foto1">
-                <img src="../Varios/images (5).png" alt="cafeteria">
+                <img src="../Varios/Fotos Sitio/tazas.de.cafe.png" alt="tazas.de.cafe">
             </div>
             <div class="foto2">
-                <img src="../Varios/descarga1.png" alt="cafeteria">
+                <img src="../Varios/Fotos Sitio/cafe.exterior.png" alt="cafe.exterior">
             </div>
             <div class="foto3">
-                <img src="../Varios/descarga2.png" alt="cafeteria">
+                <img src="../Varios/Fotos Sitio/cafeteria.png" alt="cafeteria">
             </div>
             <div class="foto4">
-                <img src="../Varios/images.png" alt="cafeteria">
+                <img src="../Varios/Fotos Sitio/cafe.granos.png" alt="cafe.granos">
             </div>
         </section>
     <footer class="Fabout">
