--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title>Contact Us</title>
+    <title>SapuCafe - Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="./index.html">Home</a>
                     <ul>
-                        <li><a href="#"> Item 1</a></li>
-                        <li><a href="#"> Item 2</a></li>
+                        <li><a href="#">Item 1</a></li>
+                        <li><a href="#">Item 2</a></li>
                     </ul>    
                 </li>
                 <li><a href="./AboutUs.html">About Us</a></li>
@@ -41,7 +41,7 @@
                     <form>
                         <div class="m-5">
                           <label for="name" class="form-label">Nombre y apellido</label>
-                          <input type="name" class="form-control" id="exampleInputname">
+                          <input type="name" class="form-control" id="Inputname">
                         </div>
                         <div class="m-5">
                           <label for="email" class="form-label">Email</label>
@@ -58,7 +58,7 @@
                           <input type="radio" class="form-check-input" id="Femenino">
                           <label class="Genero" value="Femenino">Femenino</label>
                         </div><br>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-success">Submit</button>
                       </form>                    
                 </div>
     </main>
