--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
+    <meta name="keywords" content="#">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title> Index </title>
+    <title>SapuCafe - Coofee shop - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -30,23 +32,17 @@
         <br><br><br>
         <section>
             <p class="intro">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus reiciendis dolores voluptas labore perferendis vel sit quas voluptatem hic possimus laboriosam, quidem qui ab nostrum accusantium magnam asperiores ipsa autem minus in fugiat pariatur debitis. Ipsam, architecto? Vero, repellat! Magnam iste alias rerum velit saepe eum omnis ad nemo dolore?
             </p>
         </section>
     <hr><br>
-    <section class="carousel">
-        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../Varios/coffee-cup-coffee-cup-caffeine-wallpaper-preview.png" class="d-block w-50 h-50" alt="Producto">
-              </div>
-              <div class="carousel-item">
-                <img src="../Varios/images.png" class="d-block w-50 h-50" alt="Producto">
-              </div>
-              <div class="carousel-item">
-                <img src="../Varios/images (5).png" class="d-block w-50 h-50" alt="Producto">
-              </div>
-            </div>
+    <section class="packs">
+        <div>
+            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
+            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
+            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
+            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
+            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
         </div>
     </section>  
     <hr><br>
