--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="ContenedorInicio">
     <header class="headerInicio">
-        <nav class="menuinicial menuinicial animate__animated animate__bounceInLeft">
+        <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html">Home</a>
                     <ul>
@@ -23,6 +23,7 @@
                     </ul>    
                 </li>
                 <li><a href="./AboutUs.html">About Us</a></li>
+                <li><a href="./shops.html">Shops</a></li>
                 <li><a href="./ContactUs.html">Contacts Us</a></li>
             </ul> 
         </nav>
