--- a/ContactUs.html
+++ b/ContactUs.html
@@ -21,6 +21,7 @@
                     </ul>    
                 </li>
                 <li><a href="./AboutUs.html">About Us</a></li>
+                <li><a href="./shops.html">Shops</a></li>
                 <li><a href="./ContactUs.html">Contacts Us</a></li>
             </ul>  
         </nav>
