--- a/shops.html
+++ b/shops.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-<body class="shopscontainer">
-    <header class="shopheader">
+<body class="shopsContainer">
+    <header class="shopHeader">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html">Home</a>
