--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title>SapuCafe - About Us</title>
+    <title>SapuCafe - Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -14,22 +14,28 @@
         <header class="HAbout">
             <nav class="menuinicial animate__animated animate__bounceInLeft">
                 <ul>
-                    <li><a href="./index.html">Home</a>
+                    <li><a href="./index.html">Inicio</a>
                         <ul>
                             <li><a href="#"> Item 1</a></li>
                             <li><a href="#"> Item 2</a></li>
                         </ul>    
                     </li>
-                    <li><a href="./AboutUs.html">About Us</a></li>
-                    <li><a href="./shops.html">Shops</a></li>
-                    <li><a href="./ContactUs.html">Contacts Us</a></li>
-                </ul>  
+                    <li><a href="./AboutUs.html">Nosotros</a></li>
+                    <li><a href="./Productos.html">Productos</a></li>
+                    <li><a href="./shops.html">Locales</a></li>
+                    <li><a href="./ContactUs.html">Contacto</a></li>
+                </ul>   
             </nav>
         </header>
     <br><br>
         <main class="main">
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit exercitationem saepe blanditiis temporibus neque, facere suscipit maxime cum! Ut voluptates corrupti autem temporibus fugit quibusdam voluptatem adipisci minus quam. Blanditiis dicta magni reiciendis, quam aspernatur numquam quod deserunt, aperiam quas nemo non alias laudantium obcaecati harum ducimus. Ut officiis nam expedita dignissimos quis fugiat, debitis cupiditate quasi blanditiis, repellendus sequi nesciunt ad, non animi minus? Exercitationem quis doloremque consequatur, id eos quod iusto sequi eligendi debitis non temporibus aliquam nemo quam quidem error, at quae enim pariatur recusandae accusantium in soluta. Molestiae vero tempore rerum repellat quidem quae magni quo? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum odio, aliquid inventore sapiente harum commodi perferendis doloribus molestiae, delectus iusto magnam ducimus error maiores provident vero distinctio, reiciendis laudantium autem sequi voluptas! Assumenda, adipisci. Eaque excepturi dolore laudantium ducimus quasi perspiciatis, provident necessitatibus cupiditate quis corporis! Nobis eligendi fuga quisquam voluptatibus doloremque sequi odit magnam quas. Ipsam architecto quam enim harum fugiat. Nihil ducimus autem magnam omnis rem cum, architecto incidunt dolorem vel! Inventore ex dolorum ducimus praesentium ad excepturi modi alias culpa est non nihil eligendi dolorem totam debitis amet magni ipsa ab, quasi voluptates dolor omnis? Animi, adipisci.
+                Nos desafiamos a cumplir el objetivo de crear a diario rituales, escogiendo diferentes métodos de preparación de café, para que sean nuestros clientes quienes se sorprenden. 
+                De esta manera, no sólo cultivarán la curiosidad sino que podrán seleccionar el mejor método para su experiencia.
+                
+                Cuando los clientes vienen, ellos encuentran métodos de preparación que nunca habían visto antes. 
+                Desde Sapu Café tratamos de cultivar en ellos la curiosidad y acompañarlos tanto con la experiencia que priorizamos tengan en los locales como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute. 
+                
             </p>
         </main>
         <br><br>
@@ -53,10 +59,10 @@
     <footer class="Fabout">
         <nav class="p-1">
             <ul class="menu2">
-                 <li><a href="./index.html">Home</a></li>
+                 <li><a href="./index.html">Inicio</a></li>
                  <li><a href="https://es-la.facebook.com/" target="_blank">Facebook</a></li>
                  <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                 <li><a href="./ContactUs.html">Contact Us</a></li>
+                 <li><a href="./ContactUs.html">Contacto</a></li>
             </ul> 
         </nav><br><br>
     </footer>
