--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
     <meta name="keywords" content="#">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title>SapuCafe - Coofee shop - Home</title>
+    <title>SapuCafe - Coofee shop - Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -16,15 +16,16 @@
     <header class="headerInicio">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html">Home</a>
+                <li><a href="./index.html">Inicio</a>
                     <ul>
                         <li><a href="#"> Item 1</a></li>
                         <li><a href="#"> Item 2</a></li>
                     </ul>    
                 </li>
-                <li><a href="./AboutUs.html">About Us</a></li>
-                <li><a href="./shops.html">Shops</a></li>
-                <li><a href="./ContactUs.html">Contacts Us</a></li>
+                <li><a href="./AboutUs.html">Nosotros</a></li>
+                <li><a href="./Productos.html">Productos</a></li>
+                <li><a href="./shops.html">Locales</a></li>
+                <li><a href="./ContactUs.html">Contacto</a></li>
             </ul> 
         </nav>
     </header>
@@ -33,7 +34,10 @@
         <br><br><br>
         <section>
             <p class="intro">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi numquam soluta at, autem minus laboriosam cum nesciunt rerum laudantium, voluptate dolorum impedit possimus quo officiis aliquam, reprehenderit architecto asperiores culpa veniam aspernatur. Quam assumenda, tempora iste aperiam impedit atque dolor aliquid cupiditate ducimus autem, aliquam explicabo laudantium dolores at perspiciatis vel accusamus neque, temporibus expedita. Nesciunt aut obcaecati omnis deserunt vitae doloremque fuga placeat reprehenderit, inventore modi at iusto ea commodi sequi similique? Repellat cupiditate facilis consequatur harum rem? Aspernatur molestias aliquam repellendus voluptates libero aliquid aut, sequi odio praesentium voluptatum nihil sunt quibusdam, necessitatibus, minima quam odit corporis nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, id nihil necessitatibus eum quod voluptate quam exercitationem expedita impedit molestias odit aliquam minus beatae? Harum dicta ex illum cupiditate aliquid quidem consequatur, eaque blanditiis optio eius! Aliquid velit eveniet esse, non laboriosam soluta nulla. Doloremque sit eum ipsa aut optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus reiciendis dolores voluptas labore perferendis vel sit quas voluptatem hic possimus laboriosam, quidem qui ab nostrum accusantium magnam asperiores ipsa autem minus in fugiat pariatur debitis. Ipsam, architecto? Vero, repellat! Magnam iste alias rerum velit saepe eum omnis ad nemo dolore?
+                El olor al café, a unos granos recién tostados, es la mejor bienvenida que cada día planificamos para brindarles cuando abrimos las puertas de nuestras tiendas y que esperamos tengan al utilizar nuestros productos. Pero eso es sólo el comienzo.
+                Desde el cultivo responsable hasta el tostado, cada detalle en la elaboración de manera artesanal es fundamental para poder disfrutar de una taza de Sapu Café. 
+                Y además de la esencia de los granos, sabemos que la forma en la que se prepara el café tiene un efecto sorprendente en el sabor de cada taza y define su cuerpo.
+
             </p>
         </section>
     <hr><br>
@@ -58,10 +62,10 @@
         <br><hr><br>
         <nav class="p-1">
             <ul class="menu2">
-                <li><a href="#" id="arriba">Home</a></li>
+                <li><a href="#" id="arriba">Inicio</a></li>
                 <li><a href="https://es-la.facebook.com/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                <li><a href="./ContactUs.html">Contact Us</a></li>
+                <li><a href="./ContactUs.html">Contacto</a></li>
             </ul> 
         </nav><br><br>
     </footer>
