--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title>SapuCafe - Contact Us</title>
+    <title>SapuCafe - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -14,16 +14,17 @@
     <header class="Hcontact">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html">Home</a>
+                <li><a href="./index.html">Inicio</a>
                     <ul>
-                        <li><a href="#">Item 1</a></li>
-                        <li><a href="#">Item 2</a></li>
+                        <li><a href="#"> Item 1</a></li>
+                        <li><a href="#"> Item 2</a></li>
                     </ul>    
                 </li>
-                <li><a href="./AboutUs.html">About Us</a></li>
-                <li><a href="./shops.html">Shops</a></li>
-                <li><a href="./ContactUs.html">Contacts Us</a></li>
-            </ul>  
+                <li><a href="./AboutUs.html">Nosotros</a></li>
+                <li><a href="./Productos.html">Productos</a></li>
+                <li><a href="./shops.html">Locales</a></li>
+                <li><a href="./ContactUs.html">Contacto</a></li>
+            </ul>   
         </nav>
     </header>
     <br><br>
