--- a/Productos.html
+++ b/Productos.html
@@ -7,13 +7,13 @@
     <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
     <meta name="keywords" content="#">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
-    <title>SapuCafe - Coofee shop - Locales</title>
+    <title>SapuCafe - Coofee shop - Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-<body class="shopsContainer">
-    <header class="headerShop">
+<body class="prodContainer">
+    <header class="headerProd">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
                 <li><a href="./index.html">Inicio</a>
@@ -26,23 +26,24 @@
                 <li><a href="./Productos.html">Productos</a></li>
                 <li><a href="./shops.html">Locales</a></li>
                 <li><a href="./ContactUs.html">Contacto</a></li>
-            </ul>  
+            </ul> 
         </nav>
-    </header>
+    </header><br>
     <main>
-        <section class="sucursales">
-            <div class="sucursales__ubi__map1">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div><br>
-            <div class="sucursales__ubi__map2">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div><br>
-            <div class="sucursales__ubi__map3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2568278953343!2d-58.485850970187904!3d-34.48985999623873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb175273d92df%3A0x407cc59eefa91315!2sAvenida%20del%20Libertador%20General%20San%20Mart%C3%ADn%2013081!5e0!3m2!1ses-419!2sar!4v1654634447916!5m2!1ses-419!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div><br>           
+        <section class="productos">
+            <div class="productos__lista">
+                <ul>
+                    <li class="cafe1"><img src="../Varios/Fotosproductos/Producto 1.png" alt="producto-cafe" width="300px" height="300px"></li>
+                    <li class="cafe2"><img src="../Varios/Fotosproductos/Producto 2.png" alt="producto-cafe" width="300px" height="300px"></li>
+                    <li class="cafe3"><img src="../Varios/Fotosproductos/Producto 3.png" alt="producto-cafe" width="300px" height="300px"></li>
+                    <li class="cafe4"><img src="../Varios/Fotosproductos/Producto 4.png" alt="producto-cafe" width="300px" height="300px"></li>
+                    <li class="cafe5"><img src="../Varios/Fotosproductos/Producto 5.png" alt="producto-cafe" width="300px" height="300px"></li>
+                    <li class="cafe6"><img src="../Varios/Fotosproductos/Producto 6.png" alt="producto-cafe" width="300px" height="300px"></li>
+                </ul>
+            </div>
         </section>
-    </main>
-    <footer class="footerShop">
+    </main><br>
+    <footer class="footerProd">
         <nav class="p-1">
             <ul class="menu2">
                  <li><a href="./index.html">Inicio</a></li>
