--- a/Productos.html
+++ b/Productos.html
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href="#"> Item 1</a></li>
                         <li><a href="#"> Item 2</a></li>
-                    </ul>   
+                    </ul>  
                 </li>
                 <li><a href="./AboutUs.html">Nosotros</a></li>
                 <li><a href="./Productos.html">Productos</a></li>
@@ -31,16 +31,24 @@
     </header><br>
     <main>
         <section class="productos">
-            <div class="productos__lista">
-                <ul>
-                    <li class="cafe1"><img src="../Varios/Fotosproductos/Producto 1.png" alt="producto-cafe" width="300px" height="300px"></li>
-                    <li class="cafe2"><img src="../Varios/Fotosproductos/Producto 2.png" alt="producto-cafe" width="300px" height="300px"></li>
-                    <li class="cafe3"><img src="../Varios/Fotosproductos/Producto 3.png" alt="producto-cafe" width="300px" height="300px"></li>
-                    <li class="cafe4"><img src="../Varios/Fotosproductos/Producto 4.png" alt="producto-cafe" width="300px" height="300px"></li>
-                    <li class="cafe5"><img src="../Varios/Fotosproductos/Producto 5.png" alt="producto-cafe" width="300px" height="300px"></li>
-                    <li class="cafe6"><img src="../Varios/Fotosproductos/Producto 6.png" alt="producto-cafe" width="300px" height="300px"></li>
-                </ul>
-            </div>
+            <div class="card" style="width: 15rem;">
+                <img src="https://github.com/jpocai/Sapu-Cafe/blob/Main/Images/Fotosproductos/Producto%201.png?raw=true" alt="pack cafe">
+                <div class="card-body">
+                  <p class="card-text">Producto 1</p>
+                </div>
+              </div>
+              <div class="card" style="width: 15rem;">
+                <img src="../Varios/Fotosproductos/Producto 1.png" class="card-img-top" alt="Producto cafe">
+                <div class="card-body">
+                  <p class="card-text">Producto 2</p>
+                </div>
+              </div>
+              <div class="card" style="width: 15rem;">
+                <img src="../Varios/Fotosproductos/Producto 1.png" class="card-img-top" alt="Producto cafe">
+                <div class="card-body">
+                  <p class="card-text">Producto 3</p>
+                </div>
+              </div>
         </section>
     </main><br>
     <footer class="footerProd">
