--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
     <header class="headerInicio">
         <nav class="menuinicial animate__animated animate__bounceInLeft">
             <ul>
-                <li><a href="./index.html">Inicio</a>
-                    <ul>
-                        <li><a href="#"> Item 1</a></li>
-                        <li><a href="#"> Item 2</a></li>
-                    </ul>    
-                </li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./AboutUs.html">Nosotros</a></li>
                 <li><a href="./Productos.html">Productos</a></li>
                 <li><a href="./shops.html">Locales</a></li>
                 <li><a href="./ContactUs.html">Contacto</a></li>
-            </ul> 
+            </ul>
         </nav>
     </header>
     <br><br>
@@ -37,7 +32,6 @@
                 El olor al café, a unos granos recién tostados, es la mejor bienvenida que cada día planificamos para brindarles cuando abrimos las puertas de nuestras tiendas y que esperamos tengan al utilizar nuestros productos. Pero eso es sólo el comienzo.
                 Desde el cultivo responsable hasta el tostado, cada detalle en la elaboración de manera artesanal es fundamental para poder disfrutar de una taza de Sapu Café. 
                 Y además de la esencia de los granos, sabemos que la forma en la que se prepara el café tiene un efecto sorprendente en el sabor de cada taza y define su cuerpo.
-
             </p>
         </section>
     <hr><br>
