--- a/AboutUs.html
+++ b/AboutUs.html
@@ -37,7 +37,6 @@
                 
                 Cuando los clientes vienen, ellos encuentran métodos de preparación que nunca habían visto antes. 
                 Desde Sapu Café tratamos de cultivar en ellos la curiosidad y acompañarlos tanto con la experiencia que priorizamos tengan en los locales como en sus hogares al utilizar nuestros productos de excelente calidad para su disfrute. 
-                
             </p>
         </main>
         <br><br>
@@ -46,16 +45,16 @@
                 <iframe src="https://www.youtube.com/embed/df3JeXVWYWA" title="YouTube video player" frameborder="1" width="100%" height="100%" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="foto1">
-                <img src="../Varios/Fotos Sitio/tazas.de.cafe.png" alt="tazas.de.cafe">
+                <img src="./Images/Fotos Sitio/tazas.de.cafe.png" alt="tazas.de.cafe">
             </div>
             <div class="foto2">
-                <img src="../Varios/Fotos Sitio/cafe.exterior.png" alt="cafe.exterior">
+                <img src="./Images/Fotos Sitio/cafe.exterior.png" alt="cafe.exterior">
             </div>
             <div class="foto3">
-                <img src="../Varios/Fotos Sitio/cafeteria.png" alt="cafeteria">
+                <img src="./Images/Fotos Sitio/cafeteria.png" alt="cafeteria">
             </div>
             <div class="foto4">
-                <img src="../Varios/Fotos Sitio/cafe.granos.png" alt="cafe.granos">
+                <img src="./Images/Fotos Sitio/cafe.granos.png" alt="cafe.granos">
             </div>
         </section>
     <footer class="Fabout">
