--- a/Productos.html
+++ b/Productos.html
@@ -38,13 +38,13 @@
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
-                <img src="../Varios/Fotosproductos/Producto 1.png" class="card-img-top" alt="Producto cafe">
+                <img src="./Images/Fotosproductos/Producto 2.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
                   <p class="card-text">Producto 2</p>
                 </div>
               </div>
               <div class="card" style="width: 15rem;">
-                <img src="../Varios/Fotosproductos/Producto 1.png" class="card-img-top" alt="Producto cafe">
+                <img src="./Images/Fotosproductos/Producto 3.png" class="card-img-top" alt="Producto cafe">
                 <div class="card-body">
                   <p class="card-text">Producto 3</p>
                 </div>
