--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <hr><br>
     <section class="packs">
         <div>
-            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
-            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
-            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
-            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
-            <img class="packs__1" src="../Varios/Fotos Sitio/SapuCafePack.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 1.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 2.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 3.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 4.png" alt="SapuCafePack">
+            <img class="packs__1" src="./Images/Fotosproductos/Producto 5.png" alt="SapuCafePack">
         </div>
     </section>  
     <hr><br>
